InlineCheckerTextBuffer: remove g_asserts in adjust_iters()

The _gspell_text_iter functions are really slow, so it's better to avoid
them if possible. Here they are not very useful.

https://bugzilla.gnome.org/show_bug.cgi?id=776811